[package]
name="insight"
version="0.1.1"
description="Local-first Instagram relationship analytics"
edition="2021"
[lib]
name="insight_lib"
crate-type= ["staticlib", "cdylib", "rlib"]
[build-dependencies]
tauri-build= {version="2",features= [] }
[dependencies]
tauri= {version="2",features= [] }
tauri-plugin-dialog="2"
serde= {version="1",features= ["derive"] }
serde_json="1"
rusqlite= {version="0.32",features= ["bundled"] }
chrono= {version="0.4",features= ["serde"] }
sha2="0.10"
zip= {version="2",default-features=false,features= ["deflate"] }
walkdir="2"
csv="1"
[dev-dependencies]
tempfile="3"
